# lagrange

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: lagrange-config.cmake.in
docs/: API.md
examples/: CMakeLists.txt  bouncing_ball.c  orbit.c  stacking.c
include/: koopman_integrator.h  lagrange.h
include/lagrange/: adaptive_integrator.h  attitude_control.h  autodiff.h  body.h  camera.h  collider.h  exoplanet.h  floating_origin.h  fractional.h  gravity.h  hierarchical_frame.h  integrator.h  koopman.h  lagrange_libration.h  lambert.h  math.h  math_simd.h  particle.h  patched_conic.h  propulsion.h  regularization.h  rings.h  shaders.glsl  sim.h  singularity.h  spatial_index.h  transfer.h  transform.h  types.h  wavelet.h  world.h
tests/: test_attitude.c  test_gravity.c  test_koopman.c  test_math.c  test_orbital.c  test_physics.c  test_rings.c  test_wavelet.c
